fixed: add phone number, chenge autofill styles, fixed content width, remove overlap

--- a/src/styles/blocks/categories.scss
+++ b/src/styles/blocks/categories.scss
@@ -49,7 +49,7 @@
     height: 100%;
     object-fit: cover;
 
-    @include hover-grow(1.1);
+    @include hover-grow(1.05);
   }
 
   &__title {
