--- a/src/styles/blocks/contact.scss
+++ b/src/styles/blocks/contact.scss
@@ -98,3 +98,11 @@
     }
   }
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  -webkit-text-fill-color: $main-text-color !important;
+  background-color: #f8f8fa !important;
+  box-shadow: 0 0 0 40rem #f8f8fa inset !important;
+}
