--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -13,6 +13,22 @@
 
   &--phone {
     background-image: url(/src/image/icons/icon-phone-call.png);
+
+    @include on-desktop {
+      &:hover::before {
+        content: '+1 234 555-55-55';
+        position: absolute;
+        right: 50px;
+
+        font-family: $font-space-grotesk;
+        font-size: 16px;
+        line-height: 32px;
+        font-weight: 700;
+        letter-spacing: 2px;
+        color: $main-text-color;
+        white-space: nowrap;
+      }
+    }
   }
 
   &--menu {
