--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -6,8 +6,6 @@
     row-gap: 96px;
     padding-block: 96px;
 
-    @include content-padding-inline;
-
     @include on-tablet {
       padding-block: 120px;
       row-gap: 120px;
