--- a/src/styles/blocks/product.scss
+++ b/src/styles/blocks/product.scss
@@ -2,7 +2,7 @@
   &__photo {
     width: 100%;
 
-    @include hover-grow(1.15);
+    @include hover-grow(1.05);
   }
 
   &__price {
