--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -65,7 +65,7 @@
     border: 2px solid #f0f1f4;
     color: $main-text-color;
 
-    @include hover-grow(1.15);
+    @include hover-grow(1.05);
   }
 
   &:active {
